syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "PlayerDieType.proto";
import "ServerBuff.proto";

// CmdId: 1235
// EnetChannelId: 0
// EnetIsReliable: true
message AvatarLifeStateChangeNotify {
	uint64 avatar_guid = 8;
	uint32 life_state = 15;
	uint32 source_entity_id = 1;
	string attack_tag = 10;
	PlayerDieType die_type = 11;
	uint32 move_reliable_seq = 7;
	repeated ServerBuff server_buff_list = 6;
}
